<resources>
    <string name="app_name">Social Contract</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="nav_drawer1">Logged in as:"</string>
    <string name="nav_drawer2">"Home"</string>
    <string name="nav_drawer3">"My Profile"</string>
    <string name="nav_drawer4">"My Accounts</string>
    <string name="nav_drawer5">"Edit Interests"</string>
    <string name="nav_drawer6">"Discover"</string>
    <string name="nav_drawer7">"Grow"</string>
    <string name="nav_drawer8">"Log Out"</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="discover">DISCOVER</string>
    <string name="grow">GROW</string>
    <string name="register">REGISTER</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="intro_introduction">Welcome! Thank you for downloading Social Contract! Our goal is to help you grow your social media accounts and find new content!</string>
    <string name="intro_discover">Discover</string>
    <string name="intro_discover_text">Discover allows you to find new social media posts and accounts. Find content from other users of Social Contract with similar interests!</string>
    <string name="intro_grow">Grow</string>
    <string name="intro_grow_text">Grow allows you to grow your social media accounts! Put out your content on Social Contract for other users to see, like, share, and follow!</string>
    <string name="intro_coins">Coins</string>
    <string name="intro_coins_text">Earn coins by liking, following, and sharing in Discover. Spend coins in Grow to gain likes, shares, and follows on your own account!</string>
    <string name="intro_welcome">Welcome!</string>
    <string name="intro_welcome_text">Thanks for using Social Contract!\nSocial Contract lets you grow your social media accounts and find interesting new content! \nSwipe to get started.</string>
    <string name="email">Email:</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_email">Enter new email:</string>
    <string name="enter_new_password">Enter new password:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">VWI3KMxAxWu89UBFzRHUDPa5I</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">8fc4S9NlgAN6dq2Jnpm5qApERUymQsyzwrLXYWTe04HHgHQ05A</string>
    <string name="instagram_base_url">https://api.instagram.com/</string>
    <string name="instagram_client_id">756d44111aca4f9da3151319b465700f</string>
    <string name="instagram_redirect_url">https://github.com/rscsam/Social-Contract</string>
    <string name="save_changes">Save Changes</string>
    <string name="loading_accounts">Loading accounts&#8230;</string>
    <string name="choose_which_account_to_grow">Choose which account to grow.</string>
    <string name="connected_accounts">Your connected accounts:</string>
    <string name="no_accounts_connected">No accounts connected</string>
    <string name="instagram_media_picture">Instagram Media Picture</string>
    <string name="enter_your_email_address">Enter your Email address:</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="enter_your_email_address_below_and_we_ll_send_you_password_reset_instructions">Enter your Email address below and we\'ll send you a new password.</string>
    <string name="send_me_reset_instructions">Reset my Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_register">Register</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="example_example_com">example@example.com</string>
    <string name="_999">999</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_email">Email:</string>
    <string name="confirm_email_address">Confirm email address</string>
    <string name="thanks_social_contract_team">Thanks, Social Contract Team</string>
    <string name="hi_thanks_for_creating_a_social_contract_account_to_continue_please_confirm_your_email_address_by_clicking_the_button_below">Hi, Thanks for creating a Social Contract account. To continue, please confirm your email address by clicking the button below.</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="no_tweets">No Tweets</string>
    <string name="checkbox">CheckBox</string>
    <string name="go">Go!</string>
    <string name="likes">Likes</string>
    <string name="shares">Shares</string>
    <string name="follows">Follows</string>
    <string name="connect_account">Connect Account</string>
    <string name="like_for_1">Like for 1</string>
    <string name="swipe_to_skip">Swipe to skip</string>
    <string name="i_m_done">I\'m Done</string>
    <string name="choose_how_you_want_to_discover_new_content">Choose how you want to discover new content:</string>
    <string name="tell_us_what_you_are_interested_in">Tell us what you are interested in!</string>
    <string name="music">Music</string>
    <string name="food">Food</string>
    <string name="movies">Movies</string>
    <string name="video_games">Video Games</string>
    <string name="sports">Sports</string>
    <string name="memes">Memes</string>
    <string name="fill_out_an_interest_profile_to_start_connecting_with_cool_content">Fill out an interest profile to start connecting with cool content!</string>
    <string name="news">News</string>
    <string name="i_want">I want</string>
    <string name="share">Share</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="quantity">Quantity</string>
    <string name="facebook_grow_go">Go!</string>
    <string name="your_requests">Your Requests:</string>
    <string name="you_don_t_have_any_requests_yet">You don\'t have any requests yet.</string>
    <string name="tap_grow_to_gain_followers_likes_and_more">Tap Grow to gain followers, likes, and more!</string>
    <string name="or">OR</string>
    <string name="tap_discover_to_start_earning_coins">Tap Discover to start earning coins!.</string>
    <string name="intro_indicator">intro_indicator</string>
    <string name="intro_next_button">intro_next_button</string>
    <string name="discover_like_icon">discover_like_icon</string>
    <string name="discover_retweet_icon">discover_retweet_icon</string>
    <string name="discover_follow_icon">discover_follow_icon</string>
    <string name="coin_icon">coin_icon</string>
    <string name="tweet_image">tweet_image</string>
    <string name="fb_like_coin_iv">fb_like_coin_iv</string>
    <string name="fb_share_coin_iv">fb_share_coin_iv</string>
    <string name="home_request_image">home_request_image</string>
    <string name="imageviewinstagram">imageViewInstagram</string>
    <string name="imageviewtwitter">imageViewTwitter</string>
    <string name="in_login_button">in_login_button</string>
    <string name="in_like_coin_iv">in_like_coin_iv</string>
    <string name="in_share_coin_iv">in_share_coin_iv</string>
    <string name="in_follow_coin_iv">in_follow_coin_iv</string>
    <string name="intro_image">intro_image</string>
    <string name="tw_coin_iv">tw_coin_iv</string>
    <string name="profile_picture">profile_picture</string>
    <string name="social_media_platform_picture">social_media_platform_picture</string>
    <string name="delete_ib">delete_ib</string>
    <string name="user_logo">user_logo</string>
    <string name="toolbar_coin_iv">toolbar_coin_iv</string>
    <string name="iv_profile">iv_profile</string>
    <string name="textview">TextView</string>
    <string name="iv_photo">iv_photo</string>
    <string name="instagram_i_want">I want</string>
    <string name="instagram_likes">Likes</string>
    <string name="instagram_shares">Shares</string>
    <string name="instagram_follows">Follows</string>
    <string name="_10">10</string>
    <string name="account_management">Account Management</string>
    <string name="edit_interest_profile">Edit Interest Profile</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="retweets">Retweets</string>
</resources>
