<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/navigation_header_group">
        <item
            android:id="@+id/nav_name"
            android:title="@string/nav_drawer1"
            app:showAsAction="withText"/>
    </group>
    <group
        android:id="@+id/navigation_home_group">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_drawer2"
            android:onClick="onNavigationItemSelected"
            app:showAsAction="withText"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_drawer3"
            android:onClick="onNavigationItemSelected"
            app:showAsAction="withText"/>
        <item
            android:id="@+id/nav_accounts"
            android:title="@string/nav_drawer4"
            android:onClick="onNavigationItemSelected"
            app:showAsAction="withText"/>
        <item
            android:id="@+id/nav_interests"
            android:title="@string/nav_drawer5"
            android:onClick="onNavigationItemSelected"
            app:showAsAction="withText"/>
    </group>
    <group
        android:id="@+id/navigation_discover_grow">
        <item
            android:id="@+id/nav_discover"
            android:title="@string/nav_drawer6"
            android:onClick="onNavigationItemSelected"
            app:showAsAction="withText"/>
        <item
            android:id="@+id/nav_grow"
            android:title="@string/nav_drawer7"
            android:onClick="onNavigationItemSelected"
            app:showAsAction="withText"/>
    </group>
    <group
        android:id="@+id/navigation_logout">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_drawer8"
            android:onClick="onNavigationItemSelected"
            app:showAsAction="withText"/>
    </group>
</menu>

