<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jd7337.socialcontract.controller.activity.RegistrationActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_password_confirm_et"
        app:layout_constraintEnd_toStartOf="@+id/register_password_confirm_et"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/retweet_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_password_et"
        app:layout_constraintEnd_toStartOf="@+id/register_password_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_email_et"
        app:layout_constraintTop_toBottomOf="@+id/register_email_et" />

    <EditText
        android:id="@+id/register_password_confirm_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/register_password_et"
        app:layout_constraintTop_toBottomOf="@+id/register_password_et" />

    <TextView
        android:id="@+id/emailLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/register_email"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_email_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/example_example_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/emailLabel2"
        app:layout_constraintTop_toBottomOf="@+id/register_logo" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:onClick="onClickRegisterDone"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_confirm_et" />

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</android.support.constraint.ConstraintLayout>
