<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="jd7337.socialcontract.controller.fragment.ProfileFragment">

    <TextView
        android:id="@+id/email_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayed_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/email_label_tv"
        app:layout_constraintTop_toTopOf="@+id/email_label_tv" />

    <LinearLayout
        android:id="@+id/edit_email_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label_tv">

        <Button
            android:id="@+id/change_email_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_email" />

        <EditText
            android:id="@+id/edit_email_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_new_email"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/confirm_email_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancel_email_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_password_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_ll"
        app:layout_constraintStart_toEndOf="parent">

        <Button
            android:id="@+id/change_password_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />

        <EditText
            android:id="@+id/edit_password_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/enter_new_password"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/confirm_password_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancel_password_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/account_management_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="360dp"
        android:text="Account Management"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_interest_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="Edit Interest Profile"
        app:layout_constraintTop_toBottomOf="@+id/account_management_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
